Added option to get DMs when someone leaves a voice channel